fixed css on mobile view

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,6 @@
   font-weight: 700;
   text-transform: uppercase;
   font-style: italic;
-  max-width: 100%;
   height: auto;
   padding-top: 30px;
   background-color: #FFC857;
@@ -23,8 +22,7 @@
 }
 
 .container{
-  width: 960px;
-  max-width: 100%;
+  width: 100%;
   padding: 20px;
   margin: 0 auto;
 }
@@ -36,21 +34,16 @@
   flex-wrap: wrap;
 }
 
-.main-nav{
-  max-width: 100%;
-  border-radius: 1em;
-}
-
-.main-nav ul{
+nav ul{
   margin: 1em 0 .5em;
   text-align: center;
 }
 
-.main-nav li{
+nav li{
   display: inline;
 }
 
-.main-nav a {
+nav a {
   display: inline-block;
   padding: .5em 1.5em;
   font-family: tahoma;
@@ -58,6 +51,6 @@
   font-size: 1.1em;
 }
 
-.main-nav a:hover{
+nav a:hover{
   color: #666666;
 }
