--- a/src/components/Resource/Resource.css
+++ b/src/components/Resource/Resource.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 960px;
   max-width: 100%;
   padding: 20px;
   margin: 0 auto;
