--- a/src/routes/About/About.css
+++ b/src/routes/About/About.css
@@ -1,7 +1,7 @@
 .About{
-  width: 960px;
   max-width: 100%;
   padding: 20px;
   margin: 0 auto;
   text-align: center;
+  line-height: 1.5em
 }
