--- a/src/routes/ResourcePage/ResourcePage.css
+++ b/src/routes/ResourcePage/ResourcePage.css
@@ -4,7 +4,6 @@
 }
 
 .resource-page-container{
-  width: 960px;
   max-width: 100%;
   padding: 20px;
   margin: 0 auto;
